<resources>
    <string name="app_name">Shoes</string>
    <string name="emailTextFieldLabel">Email</string>
    <string name="passwordTextFieldLabel">Password</string>
    <string name="loginBtnText">Login</string>
    <string name="appTitleLogin">Shoe Store Inventory</string>
    <string name="app_logo_description">Image of app logo</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one_btn_text">Create one</string>
    <string name="welcome">Welcome!</string>
    <string name="what_is_shoes_summary">Shoes helps you to organize the inventory of your shoe store.</string>
    <string name="next_btn_text">Next</string>
    <string name="details_screen_description">Selecting a shoe shows you detailed information about it.</string>
    <string name="overview_screen_description">The overview screen lists all of your shoes at a glance.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="made_by_label">by</string>
    <string name="shoe_size_label">Size</string>
    <string name="add_new_shoe_button_descr">Add new shoe button</string>
    <string name="add_shoe_header">To add a new shoe fill the form and save.</string>
    <string name="shoe_name_label">Shoe name</string>
    <string name="shoe_company_label">Company</string>
    <string name="shoe_description_label">Description</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="shoe_inventory_title">Shoe Inventory</string>
    <string name="add_shoe_title">Add shoe</string>
    <string name="add_predefined_shoes_menu_label">Add predefined shoes</string>
    <string name="clear_shoe_inventory_menu_label">Clear shoe inventory</string>
    <string name="not_avail">n.a.</string>
</resources>
